packages/reference/client/scss/60_components/_c-email-signup.scss
.c-email-signup {
  background-color: $accent-global;
  background-position: center;
  background-size: cover;
  color: white;

  &__title {
    margin: 0;
    padding: 0;
    padding-top: $global-spacing-unit;
  }

  &__cat {
    font-size: 0.9rem;
    padding: $global-spacing-unit $global-spacing-unit-tiny;
    margin: 0;
  }

  &__form-wrapper {
    display: flex;
    padding: 0 $global-spacing-unit;
    padding-bottom: $global-spacing-unit;
  }

  &__input {
    font-size: 0.8rem;
    padding: $global-spacing-unit-small;
    border-width: 1px;
    flex-grow: 1;

    &--invalid {
      background: $background-warning;
      border: 1px solid $background-primary;
    }
  }

  &__button {
    margin: 0;
    height: 100%;
  }

  &__error-message {
    font-size: 0.9rem;
    margin: 0;
    margin-top: -$global-spacing-unit-tiny;
    padding: 0 $global-spacing-unit-small;
    padding-bottom: $global-spacing-unit-small;
  }
}

